--- a/bookaroom/src/app/header/header.component.html
+++ b/bookaroom/src/app/header/header.component.html
@@ -1,3 +1,32 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3cb878; opacity: 0.8;">
+    <a class="navbar-brand" href="#">Book a room in GFA</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <button type="button" class="btn btn-success" style="margin: 3px">home</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Silent Room</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Small</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Medium</button>
+
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Large</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Event Space</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-success" style="margin: 3px">Reboot</button>
+            </li>
+        </ul>
+    </div>
+</nav>
