--- a/bookaroom/src/app/table/table.component.html
+++ b/bookaroom/src/app/table/table.component.html
@@ -8,11 +8,11 @@
         </thead>
         <tbody>
             <tr class="first" *ngFor="let t of time; let i=index;" scope=" rowfirst">{{9+i}}-{{10+i}}
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td>valaki</td>
-                <td>más valaki</td>
+                <td (click)="clickMe()" [ngStyle]="{'background-color': color}"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
