--- a/bookaroom/src/app/header/header.component.html
+++ b/bookaroom/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <button type="button" class="btn btn-success" style="margin: 3px">home</button>
+                <button type="button" class="btn btn-success" style="margin: 3px">Home</button>
             </li>
             <li class="nav-item">
                 <button type="button" class="btn btn-success" style="margin: 3px">Silent Room</button>
@@ -29,7 +29,7 @@
             </li>
         </ul>
     </div>
-    <div class="userName">
+    <div class="userName" *ngIf="auth.isAuthenticated()">
       {{auth.userName}}  
     </div>
     <button class="logOutButton"
